# trecia-uzduotis

./: .gitignore  CMakeLists.txt  Makefile  README.md  duomenu-apdorojimas.cpp  duomenu-apdorojimas_Masyvai.cpp  kursiokai.txt  main.cpp
Doxygen/: annotated.html  annotated_dup.js  catch_8hpp_source.html  class_catch_1_1_assertion_handler-members.html  class_catch_1_1_assertion_handler.html  class_catch_1_1_benchmark_looper-members.html  class_catch_1_1_benchmark_looper.html  class_catch_1_1_binary_expr-members.html  class_catch_1_1_binary_expr.html  class_catch_1_1_detail_1_1_approx-members.html  class_catch_1_1_detail_1_1_approx.html  class_catch_1_1_detail_1_1_approx.js  class_catch_1_1_detail_1_1_is_stream_insertable-members.html  class_catch_1_1_detail_1_1_is_stream_insertable.html  class_catch_1_1_exception_translator_registrar-members.html  class_catch_1_1_exception_translator_registrar.html  class_catch_1_1_expr_lhs-members.html  class_catch_1_1_expr_lhs.html  class_catch_1_1_lazy_expression-members.html  class_catch_1_1_lazy_expression.html  class_catch_1_1_match_expr-members.html  class_catch_1_1_match_expr.html  class_catch_1_1_matchers_1_1_generic_1_1_predicate_matcher-members.html  class_catch_1_1_matchers_1_1_generic_1_1_predicate_matcher.html  class_catch_1_1_matchers_1_1_impl_1_1_matcher_untyped_base-members.html  class_catch_1_1_matchers_1_1_impl_1_1_matcher_untyped_base.html  class_catch_1_1_non_copyable-members.html  class_catch_1_1_non_copyable.html  class_catch_1_1_reusable_string_stream-members.html  class_catch_1_1_reusable_string_stream.html  (+213 more)
(+35 files in other folders)
